hphp/hack/test/typecheck/aktuple/array_map.php.exp
File "array_map.php", line 6, characters 17-53:
Invalid argument (Typing[4110])
  File "array_map.php", line 3, characters 24-34:
  Expected `vec<int>`
  File "array_map.php", line 6, characters 38-52:
  But got `dict<[unresolved], _>`
File "array_map.php", line 6, characters 17-53:
Invalid argument (Typing[4110])
  File "array_map.php", line 3, characters 24-34:
  Expected `vec<int>`
  File "array_map.php", line 6, characters 38-52:
  But got `dict<int, _>`
